Add paragraph to page

--- a/work/lingua-extraterrestris/index.html
+++ b/work/lingua-extraterrestris/index.html
@@ -133,8 +133,14 @@ label: project-lingua
    <div class="container">
       <div class="container-two-thirds shift">
          <p>
-            I presented my thesis at the Communicating Across the Cosmos <a href="http://communicating.seti.org/" title="Communicating Across the Cosmos workshop webpage on the SETI Institute website">workshop</a> in 2014 at the SETI Institute in Mountain View, CA, and at the History and Philosophy of Astrobiology <a href="http://www.liviuniverset.dk/images/stories/the_history_and_philosophy_of_astrobiology_lund_university_pufendorf.pdf" title="History and Philisophy of Astrobioloby symposium programme (PDF)">symposium</a> on Tycho Brache's island of Ven in Sweden in 2011.
+            In 2011 I presented my thesis at the History and Philosophy of Astrobiology <a href="http://www.liviuniverset.dk/images/stories/the_history_and_philosophy_of_astrobiology_lund_university_pufendorf.pdf" title="History and Philisophy of Astrobioloby symposium programme (PDF)">symposium</a> on Tycho Brache's island of Ven in Sweden.
          </p>
+         <p>
+            In 2014 I presented Ligua Extraterrestris at the Communicating Across the Cosmos <a href="http://communicating.seti.org/" title="Communicating Across the Cosmos workshop webpage on the SETI Institute website">workshop</a> at the SETI Institute in Mountain View, CA. I also speculated about the ways in which we can message to extratettestrial intelligence about our existence, for example by modifying Sun's natural transit light curve using light pulses emitted from Earth, which can be used to signal and communicate.
+         </p>
+         <div class="block-margin">
+            <img src="/img/work/lingua-extraterrestris.png">
+         </div>
          <p>
             I also discussed my research in an interview for a BBC Futures <a href="http://www.bbc.com/future/story/20141112-will-et-understand-our-messages" title="BBC Futures article by Tracy Logan">article</a> by Tracey Logan.
          </p>
