--- a/contact/index.html
+++ b/contact/index.html
@@ -6,10 +6,13 @@ label: contact
 <section>
    <div class="container">
       <div class="container-two-third shift">
-         <ul>
-            <li>Email: <a href="mailto:{{ site.data.mk.email }}@gmail.com">{{ site.data.mk.email }}@gmail.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/marek-kultys/">{{ site.data.mk.author }}</a></li>
-         </ul>
+         <p>
+            <ul>
+               <li>Email: <a href="mailto:{{ site.data.mk.email }}@gmail.com">{{ site.data.mk.email }}@gmail.com</a></li>
+               <li>LinkedIn: <a href="https://www.linkedin.com/in/marek-kultys/">{{ site.data.mk.author }}</a></li>
+            </ul>
+         </p>
+         <p>My CV is available <a href="/cv/Marek Kultys CV - 2024 Q4 - For Website.pdf" title="CV for Marek Kultys" target="_blank">here</a>. My design portfolio upon request.</p>
       </div>
    </div>
    <div class="container">
