--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ label: home
             Earlier, I designed a novel <a href="https://www.science-practice.com/projects/sequence-bundles/" title="Sequence Bundles - project page on Science Practice website">data visualisation method</a> for bioinformatics, visual identity for a biotech <a href="https://www.immunocore.com/" title="Immunocore - company website">unicorn</a>, and concept products in genomic medicine, clinical trial data <a href="https://www.ctrl-group.com/case-studies/vivli" title="Vivli - project page on Ctrl Group website">sharing</a>, and portable DNA research.
          </p>
          <p>
-            I speak aboud design, serve as a design mentor and coach, write about UX. At home, I bring up three young human beings.
+            I speak aboud design, serve as a design mentor and coach, and write about UX. At home, I bring up three young human beings.
          </p>
       </div>
    </div>
