--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,8 @@ label: contact
          <p>
             <ul>
                <li>Email: <a href="mailto:{{ site.data.mk.email }}@gmail.com">{{ site.data.mk.email }}@gmail.com</a></li>
-               <li>LinkedIn: <a href="https://www.linkedin.com/in/marek-kultys/">{{ site.data.mk.author }}</a></li>
+               <li>LinkedIn: <a href="https://linkedin.com/in/marek-kultys/">{{ site.data.mk.author }}</a></li>
+               <li>GitHub: <a href="https://github.com/marek-kultys">{{ site.data.mk.github }}</a></li>
             </ul>
          </p>
          <p>My CV is available <a href="/cv/Marek Kultys CV - 2024 Q4 - For Website.pdf" title="CV for Marek Kultys" target="_blank">here</a>. My design portfolio upon request.</p>
