--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ label: home
       <div class="container-two-thirds">
          <img src="/img/graph-h.png" class="banner-horizontal"/>
          <p>
-            Today, at <a href="https://evinova.com/" title="Evinova - company website">Evinova</a>, I head design for Study Design and Planning. The SDP product supports study sponsors in designing optimal clinical trials by accessing design and operational intelligence early on, when study costs are not yet locked-in.
+            Today, at <a href="https://evinova.com/" title="Evinova - company website">Evinova</a>, I head design for the Study Design and Planning product. It supports study sponsors in designing and optimising clinical trials by accessing design and operational intelligence early on, when study costs are not yet locked-in.
          <p>
             Previously, at <a href="http://benevolent.com" title="BenevlentAI - company website">BenevolentAI</a>, I hired a stellar UX team that designed and developed a platform for drug discovery. It gave scientists access to powerful AI models at scale, helped deliver a diversified drug pipeline, and led to an <a href="https://www.benevolent.com/news-and-media/press-releases-and-in-media/fda-grants-emergency-use-authorisation-baricitinib-hospitalised-covid-19-patients-nine-months-after-initial-hypothesis-was-publi/" title="BenevolentAI - press release">FDA approval</a> for a treatment for Covid-19 patients.
          </p>
