--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@ label: contact
                <li>GitHub: <a href="https://github.com/marek-kultys">{{ site.data.mk.github }}</a></li>
             </ul>
          </p>
-         <p>My CV is available <a href="/cv/Marek Kultys CV - 2024 Q4 - For Website.pdf" title="CV for Marek Kultys" target="_blank">here</a>. My design portfolio upon request.</p>
+         <p>My CV is available <a href="/cv/Marek Kultys CV - 2024 Q4 for website.pdf" title="CV for Marek Kultys" target="_blank">here</a>. My design portfolio upon request.</p>
       </div>
    </div>
    <div class="container">
