--- a/work/index.html
+++ b/work/index.html
@@ -115,6 +115,9 @@ label: work
             <p>
                I authored and led a series of hands-on workshops for data science academics and professionals introducing them to the principles of visual design.
             </p>
+            <p>
+               <a href="{{ site.data.pages.project-data-explorers.link }}">More about the project</a>
+            </p>
             <a href="{{ site.data.pages.project-data-explorers.link }}" class="image-link"><img src="/img/work/data-explorers.png"></a>
          </div>
 
@@ -127,6 +130,9 @@ label: work
             <p>
                This is my personal investigation into the limits of communication. I looked at historical and fictional instances of communicating with extraterrestrial intelligence to draw scientific and existential conclusions.
             </p>
+            <p>
+               <a href="{{ site.data.pages.project-lingua.link }}">More about the project</a>
+            </p>
             <a href="{{ site.data.pages.project-lingua.link }}" class="image-link"><img src="/img/work/lingua-extraterrestris.png"></a>
          </div>
 
@@ -138,6 +144,9 @@ label: work
             <h4>2008–2010</h4>
             <p>
                I created a set of visualisations explaining the cellular processes of mitosis and meiosis. Published under an open license, the diagrams became popular on Wikipedia pages.
+            </p>
+            <p>
+               <a href="{ site.data.pages.project-mitosis.link }}">More about the project</a>
             </p>
             <a href="{{ site.data.pages.project-mitosis.link }}" class="image-link"><img src="/img/work/mitosis-meiosis.png"></a>
          </div>
