--- a/work/index.html
+++ b/work/index.html
@@ -17,7 +17,7 @@ label: work
                At Evinova, AstraZeneca’s global health-tech business, I lead a UX team that designs and delivers Study Design and Planning (SDP), a sponsor-side solution for optimising clinical trials.
             </p>
             <p>
-               SDP gives study teams the tools and insights to make key design choices for their clinical trials early on, before design and budget get locked-in. Users will use SDP to optimise trials for patient-centricity, faster recruitment, reduced complexity, population diversity, higher probability of success, cost effectiveness, and sustainability.
+               SDP gives study teams the tools and insights to make key design choices for their clinical trials early on, before design and budgets get locked-in. Users will use SDP to optimise trials for patient-centricity, faster recruitment, reduced complexity, population diversity, higher probability of success, cost effectiveness, and sustainability.
             </p>
             <a href="{{ site.data.pages.project-evinova.link }}" class="image-link"><img src="/img/work/evinova/evinova-sdnp-browser.png"></a>
          </div>
@@ -46,7 +46,7 @@ label: work
             <h3>
                <a href="{{ site.data.pages.project-biodesign.link }}">{{ site.data.pages.project-biodesign.headline }}</a>
             </h3>
-            <h4>2014–2019</h4>
+            <h4>2013–2019</h4>
             <p>
                At Science Practice, I led a design team focused on helping life science companies design and build digital products. We worked with <a href="https://lifebit.ai/" target="_blank">Lifebit</a>, <a href="https://www.genomicsplc.com/" target="_blank">Genomics PLC</a>, <a href="https://www.naturemetrics.co.uk/" target="_blank">NatureMetrics</a>, <a href="https://www.discngine.com/" target="_blank">Discngine</a>, Repositive, and more.
             </p>
@@ -73,9 +73,9 @@ label: work
             <h3>
                <a href="{{ site.data.pages.project-ctrl.link }}">{{ site.data.pages.project-ctrl.headline }}</a>
             </h3>
-            <h4>2014–2019</h4>
+            <h4>2013–2019</h4>
             <p>
-               At Ctrl Group, I led and contributed to a range of design projects, including <a href="https://www.ctrl-group.com/case-studies/vivli">prototyping a platform</a> for sharing clinical trial data, instructional design and training experiences for participants in clinical studies, <a href="https://fora.health/#case-studies">conversational interfaces</a> for patient management of depression, and a patient-friendly health data report.
+               At Ctrl Group, I led and contributed to a range of design projects: <a href="https://www.ctrl-group.com/case-studies/vivli">prototyping Vivli</a>, a platform for sharing clinical trial data; instructional design and training experiences for patients in digitally enabled clinical studies; <a href="https://fora.health/product">Fora Health conversational interfaces</a> for better management of depression; and a patient-friendly health data report for <a href="https://www.cognitionkit.com/">Cognition Kit</a>.
             </p>
             <a href="{{ site.data.pages.project-ctrl.link }}" class="image-link"><img src="/img/work/ctrl-group.png"></a>
          </div>
@@ -99,7 +99,7 @@ label: work
             </h3>
             <h4>2011–2013</h4>
             <p>
-               I worked with Immunocore just before they became a biotech super-star. Amongst other things, I designed Immunocore's visual identity which is still being used today!
+               I worked with Immunocore just before they became a biotech unicorn. Amongst other things, I designed Immunocore's visual identity which is still being used today!
             </p>
             <div class="block-margin">
                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Welcome to the <a href="https://twitter.com/Nasdaq?ref_src=twsrc%5Etfw">@Nasdaq</a> family, <a href="https://twitter.com/Immunocore?ref_src=twsrc%5Etfw">@Immunocore</a>! 👏<a href="https://twitter.com/hashtag/NasdaqListed?src=hash&amp;ref_src=twsrc%5Etfw">#NasdaqListed</a>: <a href="https://twitter.com/search?q=%24IMCR&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$IMCR</a> <a href="https://t.co/fIQX8VoJqh">pic.twitter.com/fIQX8VoJqh</a></p>&mdash; Nasdaq Exchange (@NasdaqExchange) <a href="https://twitter.com/NasdaqExchange/status/1357735918396989442?ref_src=twsrc%5Etfw">February 5, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
