--- a/work/index.html
+++ b/work/index.html
@@ -146,7 +146,7 @@ label: work
                I created a set of visualisations explaining the cellular processes of mitosis and meiosis. Published under an open license, the diagrams became popular on Wikipedia pages.
             </p>
             <p>
-               <a href="{ site.data.pages.project-mitosis.link }}">More about the project</a>
+               <a href="{{ site.data.pages.project-mitosis.link }}">More about the project</a>
             </p>
             <a href="{{ site.data.pages.project-mitosis.link }}" class="image-link"><img src="/img/work/mitosis-meiosis.png"></a>
          </div>
