Change style to show controls on video in Vivli

--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -13,7 +13,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <div class="block-margin">
             <div class="video-wrapper">
-               <video autoplay muted loop playsinline class="shadow">
+               <video autoplay muted loop controls playsinline class="shadow">
                   <source src="/img/cases/vivli/vivli-for-website.webm" type="video/webm">
                   Your browser does not support the video tag.
                   <img src="/img/cases/vivli-front.png" title="Your browser does not support the video tag" alt="Vivli prototype walkthrough">
