--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -13,7 +13,7 @@ label: case-studies
             <p>
                I helped Vivli advance their vision for a new clinical trial data sharing platform from technical specs to a tangible experience, and win the backing of their consortium of partners.
             </p>
-            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/vivli-front.png"></a>
+            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/vivli-front.png" class="shadow"></a>
          </div>
 
 
@@ -23,7 +23,7 @@ label: case-studies
             <p>
                I designed and produced patient onboarding and trainig experiences for a clinical study of a smart inhaler for COPD.
             </p>
-            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/concept2-front.png"></a>
+            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/concept2-front.png" class="shadow"></a>
          </div>
 
 
@@ -33,7 +33,7 @@ label: case-studies
             <p>
                I invented a new visualisation method to help expose hidden patterns in data that otherwise remain hidden. It is available in a full-feature desktop app and quick-access web app.
             </p>
-            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/sequence-bundles-front.png"></a>
+            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/sequence-bundles-front.png" class="shadow"></a>
          </div>
 
 
@@ -43,7 +43,7 @@ label: case-studies
             <p>
                I developed brand and science communication assets that Immunocore has been using for over a decade.
             </p>
-            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/immunocore-front.png"></a>
+            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/immunocore-front.png" class="shadow"></a>
          </div>
 
       </div>
