Update list leading in Vivli

--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -48,6 +48,8 @@ label: case-study
                <li>Validate Vivli’s vision with target users</li>
                <li>Get Vivli’s consortium of partners behind this vision</li>
             </ul>
+            <p>
+            </p>
       </div>
 
       <div class="container-two-thirds shift">
@@ -102,6 +104,9 @@ label: case-study
          </p>
          <p>
             With the prototype, I produced a video demo showing Vivli’s vision in tangible, realistic terms. It helped Vivli founders impress their partners and win their support.
+         </p>
+         <p>
+            Following this, Vivli became one of the top platforms for clinical trial data sharing. Today, Vivli lists 7,718 clinical studies from 55 sponsors, including major organisations in pharma and academia.
          </p>
       </div>
 
