Update copy in Concept2 case

--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -33,10 +33,13 @@ label: case-study
       <div class="container-two-thirds shift">
             <h3>The Challenge</h3>
             <p>
-               It has been reported that only 40%–60% of COPD patients adhere to prescribed drug regimen, and only 1 out of 10 perform inhalation correctly (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2629978/">source</a>). Pharma companies aim to improve health outcomes by building digital tools to help with adherence and technique.
+               It has been reported that only 40%–60% of COPD patients adhere to prescribed drug regimen, and only 1 out of 10 perform inhalation correctly (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2629978/">source</a>). Pharma companies aim to improve health outcomes by developing digital tools that support better adherence and technique.
             </p>
             <p>
-               In 2017, Novartis needed a design for a new patient-facing app that paired with a smart inhaler, tracked medication adherence, sent reminders, and coached COPD patients. A phase III study was to evaluate rhe benefits of this digital intervention. For onboarding, a new training experience was needed to train study participants in pairing of the inhaler and taking the inhalations correctly.
+               In 2017, Novartis developed a smart inhaler called Concept2 that could detect the occurence and quality of inhallations. To pair with Concept2, a new patient-facing app was needed to track medication adherence, set routines, and coach COPD patients. A phase III study was planned to evaluate the benefits of Concept2.
+            </p>
+            <p>
+               My role was to design a new experience to train study participants in the correct technique of inhallation, and to help sustain it.
             </p>
       </div>
 
@@ -44,19 +47,33 @@ label: case-study
          <div class="block-margin">
             <img src="/img/cases/concept2/concept2-instructions.png" class="image-gallery shadow">
             <img src="/img/cases/concept2/concept2-prototype.png" class="image-gallery shadow">
-            <img src="/img/cases/concept2/concept2-pov.jpg" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-pov.png" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I invited Vivli's technical leadership to co-design.
+               Traditional training came in the form of a printed comic strip. Lots of room for user error, as well as opportunity for improvement through digitisation.
+            </h4>
+            <h4 class="caption">
+               I prototyped the new video training using stills and short videos synchronised with the voiceover script and follow-along inhalation visualisations (big blue dot).
+            </h4>
+            <h4 class="caption">
+               I also evaluated the potential of first-person video to improve inhaler training.
             </h4>
          </div>
       </div>
 
       <div class="container-two-thirds shift">
          <h3>The Solution</h3>
+         <p>
+            For Concept2, we chose video over print because:
+         </p>
+         <ul>
+            <li>Training can be integrated into in-app user onboarding</li>
+            <li>Video represents time as a key quality of the correct inhalation technique</li>
+            <li>When Concept2 detects decline in technique, it can prompt a tailored refresher</li>
+         </ul>
          <p>
             As part of a broader app development project, I led the design and production of an in-app video onboarding and training experience that prepared patients to use their digital inhaler in a clinical trial.
          </p>
@@ -70,7 +87,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I invited Vivli's technical leadership to co-design.
+               Screens from the final production with follow-along instructions for preparation and timed inhallation.
             </h4>
          </div>
       </div>
@@ -81,19 +98,19 @@ label: case-study
             In the design stage, I storyboarded the video, prototyped and iterated inhalation sequences (tested on myself and team as patient proxies) and secured regulatory sign-offs.
          </p>
          <p>
-            In production, I hired actors and directed filming, voiceover and foley recordings, editing, and post-production. I also managed translation and localisation into 7 languages.
+            For production, I hired actors and directed filming, voiceover and foley recordings, editing, and post-production. I also managed translation and localisation into 7 languages (Czech, Dutch, UK and US English, French, German, Korean).
          </p>
       </div>
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-video.jpg" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-video.png" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I invited Vivli's technical leadership to co-design.
+               Screen from the Czech version of the Concept2 training video.
             </h4>
          </div>
       </div>
@@ -104,7 +121,7 @@ label: case-study
             The video was used in the Novartis <a href="https://clinicaltrials.gov/study/NCT03379233?term=NCT03379233&rank=1">NCT03379233</a> clinical trial that aimed to evaluate the effects of digital interventions on patient adherence and engagement.
          </p>
          <p>
-            Patients were successfully onboarded and trained, but the trial was discontinued due to inhaler device malfunction.
+            Patients were successfully onboarded and trained, but the trial was discontinued due to an inhaler device malfunction.
          </p>
       </div>
 
