Replaced special characters

--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -39,7 +39,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Challenge</h3>
          <p>
-            Vivli is a global non-profit on a mission to maximise the use and access to clinical trial data for the benefit of the wider biomedical R&D community.
+            Vivli is a global non-profit on a mission to maximise the use and access to clinical trial data for the benefit of the wider biomedical R&amp;D community.
          </p>
          <p>
             In 2016, Vivli approached with technical specs of their new data sharing platform. They needed help with two key challenges holding up their progress:
