Minor copy improvements

--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -27,7 +27,7 @@ label: case-study
             <h4 class="caption"><b>My role:</b> Design Lead / contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project</h4>
             <h4 class="caption"><b>Year:</b> 2016</h4>
-            <h4 class="caption"><b>Contribution:</b> Design leadership, Client leadership, UX design, Vision prototyping, Qualitative research</h4>
+            <h4 class="caption"><b>My contributions:</b> Design leadership, Client leadership, UX design, Vision prototyping, Qualitative research</h4>
             <h4 class="caption"><b>Outcome:</b> Vivli successfully secured backing from consortium partners</h4>
          </div>
       </div>
