--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -21,7 +21,7 @@ label: case-study
             <h4 class="caption"><b>My role:</b> Design Lead / contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project, B2B</h4>
             <h4 class="caption"><b>Year:</b> 2017</h4>
-            <h4 class="caption"><b>Contribution:</b> Content production and localisation, Instructional design, Prototyping, Project management</h4>
+            <h4 class="caption"><b>My contributions:</b> Content production and localisation, Instructional design, Prototyping, Project management</h4>
             <h4 class="caption"><b>Outcome:</b> Clinical trial successfully onboarded and trained patients</h4>
          </div>
       </div>
