Add voyager image to home page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ label: home
 <section>
    <div class="container">
       <div class="container-one-third">
-         <img src="/img/graph-v.png" class="banner-vertical"/>
+         <img src="/img/voyager-alpha3.png" class="banner-for-desktop"/>
       </div>
       <div class="container-two-thirds">
-         <img src="/img/graph-h.png" class="banner-horizontal"/>
+         <img src="/img/voyager-alpha3.png" class="banner-for-mobile"/>
          <p>
             Currently, at <a href="https://evinova.com/" title="Evinova - company website">Evinova</a>, I head design for the Study Design and Planning product. It supports study sponsors in designing and optimising clinical trials by accessing design and operational intelligence early on, when study costs are not yet locked-in.
          <p>
