Minor copy changes in case studies

--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -18,7 +18,7 @@ label: case-study
 
       <div class="container-one-third shift-back">
          <div class="caption-margin">
-            <h4 class="caption"><b>My role:</b> Design Lead / contributor</h4>
+            <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project, B2B</h4>
             <h4 class="caption"><b>Year:</b> 2017</h4>
             <h4 class="caption"><b>My contributions:</b> Content production and localisation, Instructional design, Prototyping, Project management</h4>
