--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -24,7 +24,7 @@ label: case-study
 
       <div class="container-one-third shift-back">
          <div class="caption-margin">
-            <h4 class="caption"><b>My role:</b> Design Lead / contributor</h4>
+            <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project</h4>
             <h4 class="caption"><b>Year:</b> 2016</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Client leadership, UX design, Vision prototyping, Qualitative research</h4>
