--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -18,7 +18,7 @@ label: case-study
 
       <div class="container-one-third shift-back">
          <div class="caption-margin">
-            <h4 class="caption"><b>My role:</b> Design Lead / contributor</h4>
+            <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project</h4>
             <h4 class="caption"><b>Year:</b> 2012</h4>
             <h4 class="caption"><b>My contributions:</b> Client leadership, Design direction, Brand design, Science communication</h4>
