Small copy changes in EE case

--- a/case-studies/entity-explorer/index.html
+++ b/case-studies/entity-explorer/index.html
@@ -21,8 +21,7 @@ label: case-study
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> In-house, B2B</h4>
             <h4 class="caption"><b>Year:</b> 2021</h4>
-            <h4 class="caption"><b>My contributions:</b> Design leadership, Data visualisation, Qualitative research, UX design, Visual design, Design system
-</h4>
+            <h4 class="caption"><b>My contributions:</b> Design leadership, Data visualisation, Qualitative research, UX design, Visual design, Design system</h4>
             <h4 class="caption"><b>Outcome:</b> Accelerated access to AI models with reduced error and bias</h4>
          </div>
       </div>
@@ -40,7 +39,7 @@ label: case-study
             The company built an extensive knowledge graph capturing current biological knowledge and deployed AI models to predict novel drug hypotheses.
          </p>
          <p>
-            The problem of evaluating AI outputs was already solved with a product called Target Triage<!--with Target Triage-->.
+            The problem of evaluating AI outputs was already solved with the product called <a href="/case-studies/target-triage/">Target Triage</a>.
          </p>
       </div>
 
