--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -20,7 +20,7 @@ label: case-studies
             <h3><a href="/case-studies/vivli/">Winning stakeholder support for Vivli</a></h3>
             <h4>at Science Practice &nbsp; &bull; &nbsp; 2016</h4>
             <p>
-               I helped Vivli advance their vision for a new clinical trial data sharing platform from technical specs to a tangible experience, and win the backing of their consortium of partners.
+               I helped advance Vivli's vision of a clinical trial data sharing platform from technical specs to a tangible experience, securing the backing of Vivli's consortium of partners.
             </p>
             <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/vivli-front.png" class="shadow"></a>
          </div>
@@ -40,7 +40,7 @@ label: case-studies
             <h3><a href="/case-studies/sequence-bundles/">Innovating in bioinformatics with Sequence Bundles</a></h3>
             <h4>at Science Practice &nbsp; &bull; &nbsp; 2013–2014</h4>
             <p>
-               I invented a visualisation method to help expose hidden patterns in data that would otherwise remain hidden. It is available in a full-feature desktop tool and a quick-access web app.
+               I invented a visualisation method to help expose patterns in data that would otherwise remain hidden. It is available in a full-feature desktop tool and a quick-access web app.
             </p>
             <a href="/case-studies/sequence-bundles/" class="image-link"><img src="/img/cases/sb-front.png" class="shadow"></a>
          </div>
@@ -50,7 +50,7 @@ label: case-studies
             <h3><a href="/case-studies/immunocore/">Communicating the brand and the science of Immunocore</a></h3>
             <h4>for Immunocore &nbsp; &bull; &nbsp; 2012</h4>
             <p>
-               I developed brand and science communication assets that Immunocore (NASDAQ: <a href="https://www.nasdaq.com/market-activity/stocks/imcr">IMCR</a>) has been using for over a decade.
+               I developed brand and science communication assets that Immunocore (NASDAQ: <a href="https://www.nasdaq.com/market-activity/stocks/imcr">IMCR</a>) has been now using for over a decade.
             </p>
             <a href="/case-studies/immunocore/" class="image-link"><img src="/img/cases/immunocore-front.png" class="shadow"></a>
          </div>
