Add mention of UI reaction in EE case

--- a/case-studies/entity-explorer/index.html
+++ b/case-studies/entity-explorer/index.html
@@ -172,5 +172,11 @@ label: case-study
          </div>
       </div>
 
+      <div class="container-two-thirds shift">
+         <p>
+            The network visualisation was used in the BenevolentAI-AstraZeneca collaboration. AZ scientists praised its ease of use, interactive gene pathway exploration, and beautiful interface.
+         </p>
+      </div>
+
    </div>
 </section>
