Minor copy update

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -55,7 +55,7 @@ label: case-studies
             <h3><a href="/case-studies/sequence-bundles/">Innovating in bioinformatics with Sequence Bundles</a></h3>
             <h4>at Science Practice &nbsp; &bull; &nbsp; 2013–2014</h4>
             <p>
-               I invented a visualisation method to help expose patterns in data that would otherwise remain hidden. It is available in a full-feature desktop tool and a quick-access web app.
+               I invented an award-winning visualisation method that reveals patterns in data that would otherwise remain hidden. It is available in a full-feature desktop tool and a quick-access web app.
             </p>
             <a href="/case-studies/sequence-bundles/" class="image-link"><img src="/img/cases/sb/sb-front8.png" class="shadow"></a>
          </div>
