--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -6,7 +6,7 @@ label: case-study
 <section>
    <div class="container">
       <h4>Case study</h4>
-      <h1>Communicating the brand and science of Immunocore</h1>
+      <h1>{{ site.data.pages.case-study.immunocore.headline }}</h1>
    </div>
 
    <div class="container">
@@ -20,7 +20,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project</h4>
-            <h4 class="caption"><b>Year:</b> 2012</h4>
+            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.immunocore.year }}</h4>
             <h4 class="caption"><b>My contributions:</b> Client leadership, Design direction, Brand design, Science communication</h4>
             <h4 class="caption"><b>Outcome:</b> Brand and science comms materials in use for over a decade (and counting)</h4>
          </div>
