--- a/case-studies/target-triage/index.html
+++ b/case-studies/target-triage/index.html
@@ -6,7 +6,7 @@ label: case-study
 <section>
    <div class="container">
       <h4>Case study</h4>
-      <h1>Accelerating scientific decision-making with Target Triage</h1>
+      <h1>{{ site.data.pages.case-study.triage.headline }}</h1>
    </div>
 
    <div class="container">
@@ -20,7 +20,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> In-house, B2B</h4>
-            <h4 class="caption"><b>Year:</b> 2019</h4>
+            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.triage.year }}</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Rapid prototyping, Qualitative research, Co-design, Content design, Design system</h4>
             <h4 class="caption"><b>Outcome:</b> Accelerated drug pipeline expansion and delivery driven by higher scientific productivity</h4>
          </div>
