Minor changes and fixes

--- a/case-studies/entity-explorer/index.html
+++ b/case-studies/entity-explorer/index.html
@@ -6,7 +6,7 @@ label: case-study
 <section>
    <div class="container">
       <h4>Case study</h4>
-      <h1>{{ site.data.pages.case-study.ee.headline }}</h1>
+      <h1>{{ site.data.pages.case-study.ee.heading }}</h1>
    </div>
 
    <div class="container">
