--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -6,7 +6,7 @@ label: case-study
 <section>
    <div class="container">
       <h4>Case study</h4>
-      <h1>{{ site.data.pages.case-study.vivli.headline }}</h1>
+      <h1>{{ site.data.pages.case-study.vivli.heading }}</h1>
    </div>
 
    <div class="container">
