1st full draft of Merlin case study before optim.

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -21,7 +21,7 @@ label: case-studies
             <h3><a href="/case-studies/merlin/">Consolidating fragmented enterprise tools with Merlin</a></h3>
             <h4>at AstraZeneca &nbsp; &bull; &nbsp; 2023</h4>
             <p>
-               I turned around an underperforming UX team to lead a successful redesign of a clinical study optimisation product at AstraZeneca by integrating 4 stand-alone tools into 1.
+               I turned around an underperforming UX team to lead a successful redesign of a clinical study optimisation product at AstraZeneca by integrating six stand-alone tools into one.
             </p>
             <a href="/case-studies/merlin/" class="image-link"><img src="/img/cases/merlin/merlin2.png" class="shadow"></a>
          </div>
