--- a/case-studies/merlin/index.html
+++ b/case-studies/merlin/index.html
@@ -12,7 +12,7 @@ label: case-study
    <div class="container">
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/merlin/merlin3.png" class="shadow">
+            <img src="/img/cases/merlin/merlin2.png" class="shadow">
          </div>
       </div>
 
@@ -22,7 +22,7 @@ label: case-study
             <h4 class="caption"><b>Project type:</b> Enterprise tools</h4>
             <h4 class="caption"><b>Year:</b> 2023</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Team leadership, Product strategy, Rapid prototyping, UX design</h4>
-            <h4 class="caption"><b>Outcome:</b> All users successfully moved to a one-workflow app, ~200% increase in CSAT scores, reduced cost-to-serve, 3× productivity boost in UX team</h4>
+            <h4 class="caption"><b>Outcome:</b> 100% of users successfully moved to the consolidated app, reduced cost to serve, 2× improvement in CSAT, 3× performance boost in UX team</h4>
          </div>
       </div>
    </div>
@@ -33,23 +33,24 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Challenge</h3>
          <p>
-            Cost Estimator, Merlin, Feasibility Optimiser and Protocol Complexity Tool have already been successful at AstraZeneca serving discrete use cases in the clinical study optimisation workflow. Merlin alone delivered hundreds of millions USD of annual benefits through detailed cost estimation of clinical trials.
+            When I joined Digital Health R&D, the work to consolidate six discrete study design and planning tools was already underway. These tools were deeply embedded in AstraZeneca's governance process, delivering millions in annual benefits.
          </p>
          <p>
-            Product leadership decided to consolidate the four products into one to reduce product maintenance costs, reduce friction for users moving between tools, and leverage strategic opportunities associated with integration.
+            Consolidation was strategically aimed to reduce cost to serve, remove user friction, and leverage the benefits of centralisation: unified data governance and analytics, holistic optimisation, and serving up- and downstream use cases from one study blueprint.
          </p>
          <p>
-            When I joined, the product team was already planning the integration, but little thoughts was given to the end user experience and trust in the data-driven product. I saw the team sleep-walking into a disaster. On top of that, the UX team was disempowered to speak up and positively influence the direction. I had to act fast.
+            Works were technically advanced but lacked UX vision and rigour. There was no clarity on user win conditions and no plan to resolve functional redundancies. The team was heading into trouble.
+         </p>   
+         <p>
+            As design lead, I acted fast to help the team replan, regroup, listen to the user, and set up for successful delivery.
          </p>
+
          <h3>My Approach</h3>
          <p>
-            I started by reorganising the UX team to shift its focus from lenghty UI hand-offs and delivery testing to concept-making and validation to reduce uncertainties around product integration. We had some talented full-stack UXers on the team, but the organisation was not using their talents to the full potential.
+            I started by reorganising the UX team to shift focus from lengthy UI hand-offs to concept validation where key product bets remained untested. We had some talented full-stack UXers but they were pigeon-holed to narrow roles, wasting their potential. 
          </p>
          <p>
-            I asked people to step up, gave them bigger responsibilities paired with one-to-one support, and empowered them to influence their squads autonomously but in line with our shared design vision for the product and shared design guidelines.
-         </p>
-         <p>
-            I also transformed the way we managed design work. I centralised tracking of design work for all squads, aligned with all cross-functional workstreams, made the UX board visible to all stakeholders in the business (together with our performance metrics), and set up regular check-points with designers to manage the flow of delivery.
+            So I asked them to take ownership of the entire design process: discovery to delivery. I paired greater responsibility with coaching and peer feedback to empower autonomy and influence in squads.
          </p>
       </div>
 
@@ -61,24 +62,24 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               How might we accelerate target triage while improving its quality?
+               I introduced changes to UX process and scope that brought a 3× performance boost to the UX team, evidenced by the improved burndown rate from Feb 2023 to June 2024 (tasks completed within individual 3-week sprints).
             </h4>
          </div>
       </div>
 
       <div class="container-two-thirds shift">
          <p>
-            In parallel, I led a cross-functional collaboration with product to prototype the desired integration. Visualising the end result as a workflow from the user-perspective (something the team has not done before) was eye-opening and led to many questions that had to be tested with users.
-         </p>
-         <p>
-            I led corresponding user validation that confirmed user requirements for an integrated product experience:
+            In parallel, I expedited concept validation to ensure we're delivering value. I led cross-functional prototyping of the end-to-end unified workflow and tested it with users. We confirmed the need for a single tool and learnt that:
          </p>
          <ul>
-            <li>users expect to enter input only once</li>
-            <li>users expect data to sync across parts of the product</li>
-            <li>integrated workflow made some of the features redundant</li>
-            <li>users' trust depends on the perceived system consistency</li>
+            <li>users want to enter study inputs only once</li>
+            <li>users expect data to sync across all parts of the product</li>
+            <li>redundant features degrade workflow and data integrity</li>
+            <li>user trust depends on the perceived system consistency</li>
          </ul>
+         <p>
+            To cross-reference these qual insights with quant data, I led an initiative to set up user analytics, segment user populations, and foster a culture of data-driven development. Our first analytics platform was Matomo but we later moved to Fullstory.
+         </p>
       </div>
 
       <div class="container-two-thirds shift">
@@ -89,34 +90,56 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               How might we accelerate target triage while improving its quality?
+               Low-fidelity prototypes helped us validate the desirable solution, align the team on shared vision, support product prioritisation, and deliver in parallel workstreams towards a common goal. 
             </h4>
          </div>
       </div>
 
       <div class="container-two-thirds shift">
-         <p>
-
-         </p>
          <h3>The Solution</h3>
          <p>
+            The team delivered a consolidated product called Merlin that brought six tools together into one study optimisation workflow:
          </p>
-         <h3>The Result</h3>
+         <ul>
+            <li>Study Designer — to digitise the design of a clinical trial</li>
+            <li>Cost Estimator — to estimate the cost of a trial in 4 minutes</li>
+            <li>Feasibility — to recommend sites to meet recruitment goals</li>
+            <li>Carbon Emissions — to calculate CO<sub>2</sub> emitted by the study</li>
+            <li>Patient Experience — to measure the burden on the patient</li>
+            <li>Complexity Tool — to evaluate the complexity of study design</li>
+         </ul>
          <p>
+            Merlin uses a single codebase and a design system for consistent look and feel. It supports all prior use cases and new ones that allow users to generate study options and make comprehensive multi-factor comparisons that inform business decision making.
          </p>
       </div>
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/merlin/merlin1.png" class="shadow">
+            <img src="/img/cases/merlin/merlin1.png" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               How might we accelerate target triage while improving its quality?
+               By bringing together multiple tools into one workflow, Merlin users can better control all clinical study metrics when optimising study design.
+            </h4>
+            <h4 class="caption">
+               For example, users can keep an eye on the rising total cost as they add sites to accelerate study recruitment.
             </h4>
          </div>
+      </div>
+
+      <div class="container-two-thirds shift">
+         <h3>The Result</h3>
+         <p>
+            Merlin was launched in October 2023 and quickly replaced all six workflows that it consolidated. 100% of users successfully migrated to the new app (evidenced in user analytics).
+         </p>
+         <p>
+            On launch, we baselined Merlin's CSAT (customer satisfaction) and UMUX-Lite scores (usability and utility). Over the next year, I drove product refinements that lifted our CSAT result up by 192%. 
+         </p>
+         <p>
+            In parallel, I transformed the UX team from an UI production unit to an influential partner driving concept and validation of high-value product bets, boosting our performance by 340%.
+         </p>
       </div>
    </div>
 </section>
