--- a/case-studies/merlin/index.html
+++ b/case-studies/merlin/index.html
@@ -39,15 +39,15 @@ label: case-study
             Consolidation was strategically aimed to reduce cost to serve, remove user friction, and leverage the benefits of centralisation: unified data governance and analytics, holistic optimisation, and serving up- and downstream use cases from one study blueprint.
          </p>
          <p>
-            Works were technically advanced but lacked UX vision and rigour. There was no clarity on user win conditions and no plan to resolve functional redundancies. The team was heading into trouble.
+            Work was technically advanced but lacked UX vision and rigour. There was no clarity on user win conditions or plan to resolve functional redundancies. The team was heading into trouble.
          </p>   
          <p>
-            As design lead, I acted fast to help the team replan, regroup, listen to the user, and set up for successful delivery.
+            As design lead, I acted fast to help the team replan, regroup, listen to users, and set up for successful delivery.
          </p>
 
          <h3>My Approach</h3>
          <p>
-            I started by reorganising the UX team to shift focus from lengthy UI hand-offs to concept validation where key product bets remained untested. We had some talented full-stack UXers but they were pigeon-holed to narrow roles, wasting their potential. 
+            I started by reorganising the UX team to shift focus from lengthy UI hand-offs to concept validation where key product bets remained untested. We had talented full-stack UXers pigeon-holed to narrow roles, wasting their potential. 
          </p>
          <p>
             So I asked them to take ownership of the entire design process: discovery to delivery. I paired greater responsibility with coaching and peer feedback to empower autonomy and influence in squads.
@@ -62,23 +62,23 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I introduced changes to UX process and scope that brought a 3× performance boost to the UX team, evidenced by the improved burndown rate from Feb 2023 to June 2024 (tasks completed within individual 3-week sprints).
+               I introduced changes to UX process and scope that brought a 3× performance boost to the UX team, evidenced by improved burndown rates from Feb 2023 to June 2024.
             </h4>
          </div>
       </div>
 
       <div class="container-two-thirds shift">
          <p>
-            In parallel, I expedited concept validation to ensure we're delivering value. I led cross-functional prototyping of the end-to-end unified workflow and tested it with users. We confirmed the need for a single tool and learnt that:
+            In parallel, I expedited concept validation to ensure value delivery. I led cross-functional prototyping of the end-to-end unified workflow and tested it with users. We confirmed the need for a single tool and learnt that:
          </p>
          <ul>
             <li>users want to enter study inputs only once</li>
-            <li>users expect data to sync across all parts of the product</li>
+            <li>users expect data to sync across all product parts</li>
             <li>redundant features degrade workflow and data integrity</li>
-            <li>user trust depends on the perceived system consistency</li>
+            <li>user trust depends on system consistency</li>
          </ul>
          <p>
-            To cross-reference these qual insights with quant data, I led an initiative to set up user analytics, segment user populations, and foster a culture of data-driven development. Our first analytics platform was Matomo but we later moved to Fullstory.
+            To cross-reference qualitative insights with quantitative data, I led an initiative to set up user analytics, segment user populations, track meaningful metrics, and foster data-driven development.
          </p>
       </div>
 
@@ -90,7 +90,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Low-fidelity prototypes helped us validate the desirable solution, align the team on shared vision, support product prioritisation, and deliver in parallel workstreams towards a common goal. 
+               Low-fidelity prototypes helped us validate the solution, align the team on shared vision, support product prioritisation, and deliver parallel workstreams towards a common goal. 
             </h4>
          </div>
       </div>
@@ -98,18 +98,18 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Solution</h3>
          <p>
-            The team delivered a consolidated product called Merlin that brought six tools together into one study optimisation workflow:
+            The team delivered Merlin, consolidating six tools together into one study optimisation workflow:
          </p>
          <ul>
-            <li>Study Designer — to digitise the design of a clinical trial</li>
-            <li>Cost Estimator — to estimate the cost of a trial in 4 minutes</li>
-            <li>Feasibility — to recommend sites to meet recruitment goals</li>
-            <li>Carbon Emissions — to calculate CO<sub>2</sub> emitted by the study</li>
-            <li>Patient Experience — to measure the burden on the patient</li>
-            <li>Complexity Tool — to evaluate the complexity of study design</li>
+            <li>Study Designer — digitises clinical study design</li>
+            <li>Cost Estimator — estimate study cost in 4 minutes</li>
+            <li>Feasibility — recommends sites to meet recruitment goals</li>
+            <li>Carbon Emissions — calculates CO<sub>2</sub> emitted by studies</li>
+            <li>Patient Experience — measure patient burden</li>
+            <li>Complexity Tool — evaluates study design complexity</li>
          </ul>
          <p>
-            Merlin uses a single codebase and a design system for consistent look and feel. It supports all prior use cases and new ones that allow users to generate study options and make comprehensive multi-factor comparisons that inform business decision making.
+            Merlin uses a single codebase and a design system for consistent experience. It supports all prior use cases plus new ones allowing users to generate study options and make holistic multi-factor comparisons that inform business decision making.
          </p>
       </div>
 
@@ -121,10 +121,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               By bringing together multiple tools into one workflow, Merlin users can better control all clinical study metrics when optimising study design.
-            </h4>
-            <h4 class="caption">
-               For example, users can keep an eye on the rising total cost as they add sites to accelerate study recruitment.
+               Users can now control all clinical study metrics when optimising study design. For example, monitoring rising total cost as they add sites to accelerate recruitment.
             </h4>
          </div>
       </div>
@@ -132,13 +129,13 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Result</h3>
          <p>
-            Merlin was launched in October 2023 and quickly replaced all six workflows that it consolidated. 100% of users successfully migrated to the new app (evidenced in user analytics).
+            Merlin launched in October 2023 and replaced all six consolidated workflows. 100% of users successfully migrated to the new app (tracked in analytics).
          </p>
          <p>
-            On launch, we baselined Merlin's CSAT (customer satisfaction) and UMUX-Lite scores (usability and utility). Over the next year, I drove product refinements that lifted our CSAT result up by 192%. 
+            We baselined Merlin's <a href="https://blog.hubspot.com/service/customer-satisfaction-score" target="_blank>">CSAT</a> and <a href="https://measuringu.com/umux-lite/" target="_blank">UMUX-Lite</a> scores on launch. Over the next year I drove product refinements that lifted CSAT by 192%. 
          </p>
          <p>
-            In parallel, I transformed the UX team from an UI production unit to an influential partner driving concept and validation of high-value product bets, boosting our performance by 340%.
+            In parallel, I transformed the UX team from a UI production unit to an influential partner driving concept and validation of high-value product bets, boosting performance by 340%.
          </p>
       </div>
    </div>
